# Novel

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  NEXT_STEPS.md  README.md  justfile  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.github/workflows/: ci.yml
chapters/: ch001.md  ch002-inconsistent.md  ch003-references.md
docs/: DEVELOPMENT.md  analysis-gap-to-claude-code.md  memory-cli.md  project-initialization-summary.md  smart-context-retrieval.md  tools-specification.md  v0.1.0-milestone.md  v0.2.0-milestone.md
docs/architecture/: ADR-001-cli-agent-architecture.md  ADR-002-Orion-Integration.md  ADR-002-nervusdb-memory.md  ADR-003-chapter-workflow.md  ADR-005-realtime-context.md  index.md
prompts/: analyze-plot.md  character-relationship.md  check-consistency.md  foreshadow-check.md  suggest-next-chapter.md
services/nervusdb/: memory.config.json  package.json  tsconfig.json
services/nervusdb/src/: config.ts  gateway.ts  server.test.ts  server.ts
services/nervusdb/src/scripts/: check.ts  compact.ts
spec/: style-guide.yaml
spec/knowledge/: character-profiles.md
spec/templates/: action.md  dialogue.md  psychology.md  scene-description.md  transition.md
src/novel_agent/: agent.py  cache.py  cli.py  context_retriever.py  continuity.py  error_handler.py  file_watcher.py  graph_ingest.py  graph_query.py  logging_config.py  long_term_memory.py  memory_ingest.py  nervus_cli.py  performance_tracker.py  permissions.py  prompt_loader.py  session_compression.py  session_export.py  session_store.py  task_manager.py  tools.py  tools_creative.py  tools_file.py  tools_task.py  workflows.py
tests/: test_agent.py  test_batch_check.py  test_cli.py  test_confidence_scoring.py  test_consistency_validation.py  test_context_integration.py  test_context_retriever.py  test_continuity.py  test_e2e.py  test_editing_tools.py  test_enhanced_creative_tools.py  test_enhanced_validation.py  test_error_handling.py  test_file_watcher.py  test_graph_integration.py  test_long_term_memory.py  test_memory_ingest.py  test_model_config.py  test_nervus_cli.py  test_outline_generator.py  test_performance_tracker.py  test_permissions.py  test_persistence.py  test_print_mode.py  test_prompt_loader.py  test_session_compression.py  test_session_export.py  test_session_store.py  test_streaming.py  test_style_guide.py  test_task_manager.py  test_terminal_input.py  test_tool_permissions.py  test_tools.py  test_tools_creative.py  test_tools_file.py  test_tools_task.py  test_workflows.py  test_writing_templates.py
tests/fixtures/: test_chapter_1.md  test_chapter_style.md
